[package]
name = "base64-url"
version = "1.4.12"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/base64-url"
homepage = "https://magiclen.org/base64-url"
keywords = ["decode", "base64", "encode", "utf8", "url"]
categories = ["encoding"]
description = "Base64 encode, decode, escape and unescape for URL applications."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
base64 = "0.13"