[package]
name = "base64-url"
version = "3.0.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.57"
repository = "https://github.com/magiclen/base64-url"
homepage = "https://magiclen.org/base64-url"
keywords = ["decode", "base64", "encode", "utf8", "url"]
categories = ["no-std", "encoding"]
description = "Base64 encode, decode, escape and unescape for URL applications."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[features]
default = []
std = ["base64/std"] # Only for the `base64` crate itself. This crate doesn't use the `std` feature.